--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
       <h1>Baia Beach Cup Store</h1>
 
       <div class="item">
-        <img src="MAT237.JPEG" alt="Pantaloncini Baia Beach Cup">
+        <img src="img/pants_1.jpeg" alt="Pantaloncini Baia Beach Cup">
         <h2>Pantaloncini Ufficiali</h2>
         <p>Leggeri, resistenti e perfetti per la spiaggia. Disponibili in varie taglie.</p>
         <a href="https://wa.me/393466358755" class="btn">Ordina su WhatsApp</a>
       </div>
 
       <div class="item">
-        <img src="1150007.JPG" alt="Cappellino Baia Beach Cup">
+        <img src="img/cap_1.jpeg" alt="Cappellino Baia Beach Cup">
         <h2>Cappellino Baia</h2>
         <p>Iconico e minimale, con logo ricamato e regolabile. Disponibilità limitata.</p>
         <a href="https://wa.me/393466358755" class="btn">Ordina su WhatsApp</a>
