--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
   <div class="overlay">
     <div class="container">
       <h1>Baia Beach Cup Store</h1>
+      <div class= "background">
+        <img src= "img/smash_1.jpeg">
 
       <div class="item">
         <img src="img/pants_2.jpeg" alt="Pantaloncini Baia Beach Cup">
