--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
       <div class="item">
         <img src="img/cap_1.jpeg" alt="Cappellino Baia Beach Cup">
-        <h2>Cappellino Baia</h2>
+        <h2>Polo Cap Baia</h2>
         <p>Iconico e minimale, con logo ricamato e regolabile. Disponibilità limitata.</p>
         <a href="https://wa.me/393466358755" class="btn">Ordina su WhatsApp</a>
       </div>
