--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
     }
 
     .item img {
-      max-width: 100%;
+      max-width: 250px;
+      width: 100%;
+      heigt: auto;
+      display: block;
+      margin: 0 auto 20 px;
       border-radius: 12px;
-      margin-bottom: 20px;
     }
 
     .item h2 {
@@ -74,7 +77,7 @@
       background-color: #ffa000;
     }
 
-    @media screen and (max-width: 150px) {
+    @media screen and (max-width: 768px) {
       h1 {
         font-size: 2rem;
       }
