--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       display: block;
       margin: 0 auto 20 px;
       border-radius: 12px;
+      margin-bottom: 20px;
     }
 
     .item h2 {
