--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     
       <div class="item">
         <img src="img/pants_2.jpeg" alt="Pantaloncini Baia Beach Cup">
+        <img src="img/pants_1.jpeg" alt= "Pantaloncini dietro">
         <h2>Pantaloncini Ufficiali</h2>
         <p>Leggeri, resistenti e perfetti per la spiaggia. Disponibili in varie taglie.</p>
         <a href="https://wa.me/393466358755" class="btn">Ordina su WhatsApp</a>
