--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 
       <div class="item">
         <img src="img/cap_1.jpeg" alt="Cappellino Baia Beach Cup">
+        <img src="img/cap_2.jpeg" alt= "Cappellino dietro">
         <h2>Polo Cap Baia</h2>
         <p>Iconico e minimale, con logo ricamato e regolabile. Disponibilità limitata.</p>
         <a href="https://wa.me/393466358755" class="btn">Ordina su WhatsApp</a>
