--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
     <div class="container">
       <h1>Baia Beach Cup Store</h1>
     
-      <div class="item">
-        <div class="slider">
-          <input type="radio" name="slide-pants" id=pants2" checked>
-          <input type="radio" name="slide-pants" id="pants2">
+     <div class="item">
+  <div class="slider">
+    <input type="radio" name="slide-pants" id="pants1" checked>
+    <input type="radio" name="slide-pants" id="pants2">
 
-           <div class="slides">
+    <div class="slides">
       <div class="slide"><img src="img/pants_2.jpeg" alt="Pantaloncini Baia Beach Cup"></div>
       <div class="slide"><img src="img/pants_1.jpeg" alt="Dettaglio pantaloncini"></div>
     </div>
