--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     }
     .slider {
   position: relative;
-  width: 250px;
+  width: 100%;
   height: 250px;
   margin: 0 auto 20px;
   overflow: hidden;
@@ -134,11 +134,11 @@
   background: #ffd54f;
 }
 
-#pants1:checked ~ .slides {
+#pants2:checked ~ .slides {
   transform: translateX(0%);
 }
 
-#pants2:checked ~ .slides {
+#pants1:checked ~ .slides {
   transform: translateX(-50%);
 }
   </style>
@@ -154,8 +154,12 @@
     <input type="radio" name="slide-pants" id="pants2">
 
     <div class="slides">
-      <div class="slide"><img src="img/pants_2.jpeg" alt="Pantaloncini Baia Beach Cup"></div>
-      <div class="slide"><img src="img/pants_1.jpeg" alt="Dettaglio pantaloncini"></div>
+      <div class="slide">
+     <img src="img/pants_2.jpeg" alt="Pantaloncini Baia Beach Cup">
+      </div>
+      <div class="slide">
+        <img src="img/pants_1.jpeg" alt="Dettaglio pantaloncini">
+      </div>
     </div>
 
     <div class="navigation">
