--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Baia Beach Cup Store</title>
+  <title>Baia Beach Cup</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -169,8 +169,8 @@
   </div>
       
         <h2>Pantaloncini Ufficiali</h2>
-        <p>Leggeri, resistenti e perfetti per la spiaggia. Disponibili in varie taglie.</p>
-        <a href="https://wa.me/393466358755" class="btn">Ordina su WhatsApp</a>
+        <p>Leggeri, resistenti e perfetti per la spiaggia. Disponibili in varie taglie. <strong>Fino a esaurimento scorte. </strong></p>
+        <a href="https://wa.me/393466358755" class="btn">Info su WhatsApp</a>
       </div>
 
       <div class="item">
