--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         </div>
         <h2>Pantaloncini Ufficiali</h2>
         <p>Leggeri, resistenti e perfetti per la spiaggia. Disponibili in varie taglie. <strong>Fino a esaurimento scorte.</strong></p>
+        <p><strong>18€</p>
         <a href="https://wa.me/393466358755" class="btn">Info su WhatsApp</a>
       </div>
 
@@ -128,11 +129,11 @@
         <div class="glider-contain">
           <div class="glider" id="glider-cap">
             <img src="img/cap_1.jpeg" alt="Cappellino Baia Beach Cup">
-            <img src="img/cap_2.jpeg" alt="Dettaglio cappellino">
           </div>
         </div>
         <h2>Polo Cap Baia</h2>
         <p>Iconico e minimale, con logo ricamato e regolabile. <strong>Disponibilità limitata.</strong></p>
+        <p><strong> 15€</strong></p>
         <a href="https://wa.me/393466358755" class="btn">Info su WhatsApp</a>
       </div>
     </div>
