--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <body>
   <div class="overlay">
     <div class="container">
-      <h1>Baia Beach Cup Store</h1>
+      <h1>Baia Beach Cup</h1>
       <p class="disclaimer">Prodotti ufficiali del torneo. Disponibili fino a esaurimento scorte.</p>
 
       <!-- Pantaloncini -->
