--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
       <div class="item">
         <div class="glider-contain">
           <div class="glider" id="glider-tank">
-            <img src="img/1150519.jpeg" alt="Canotta ufficiale Baia Beach Cup fronte">
-            <img src="img/1150536.jpeg" alt="Canotta ufficiale Baia Beach Cup retro">
+            <img src="1150519.jpeg" alt="Canotta ufficiale Baia Beach Cup fronte">
+            <img src="1150536.jpeg" alt="Canotta ufficiale Baia Beach Cup retro">
           </div>
         </div>
         <h2>Canotta Ufficiale</h2>
-        <p>Comoda e traspirante, perfetta per giocare e per il tempo libero. Disponibile in varie taglie. <strong>Fino a esaurimento scorte.</strong></p>
-        <p><strong>20€</strong></p>
+        <p>Comoda e traspirante, perfetta per giocare e per il tempo libero. Taglie disponibili: 1 XL e 2 XXL. <strong>Fino a esaurimento scorte.</strong></p>
+        <p><strong>15€</strong></p>
         <a href="https://wa.me/393466358755" class="btn">Info su WhatsApp</a>
       </div>
 
