--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </div>
         </div>
         <h2>Pantaloncini Ufficiali</h2>
-        <p>Leggeri, resistenti e perfetti per la spiaggia. Disponibili in varie taglie. <strong>Fino a esaurimento scorte.</strong></p>
+        <p>Leggeri, resistenti e perfetti per la spiaggia. Taglie disponibili: 1 XXL. <strong>Fino a esaurimento scorte.</strong></p>
         <p><strong>18€</strong></p>
         <a href="https://wa.me/393466358755" class="btn">Info su WhatsApp</a>
       </div>
@@ -146,7 +146,7 @@
           </div>
         </div>
         <h2>Canotta Ufficiale</h2>
-        <p>Comoda e traspirante, perfetta per giocare e per il tempo libero. Taglie disponibili: 1 XL e 2 XXL. <strong>Fino a esaurimento scorte.</strong></p>
+        <p>Comoda e traspirante, perfetta per giocare e per il tempo libero. Taglie disponibili: 2 XL e 2 XXL. <strong>Fino a esaurimento scorte.</strong></p>
         <p><strong>15€</strong></p>
         <a href="https://wa.me/393466358755" class="btn">Info su WhatsApp</a>
       </div>
