--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <a href="https://wa.me/393466358755" class="btn">Info su WhatsApp</a>
       </div>
 
-      <!-- Canotta -->
+            <!-- Canotta -->
       <div class="item">
         <div class="glider-contain">
           <div class="glider" id="glider-tank">
@@ -146,13 +146,14 @@
           </div>
         </div>
         <h2>Canotta Ufficiale</h2>
-        <p>Comoda e traspirante, perfetta per giocare e per il tempo libero. Taglie disponibili: 2 XL e 2 XXL. <strong>Fino a esaurimento scorte.</strong></p>
+        <p>Comoda e traspirante, perfetta per giocare e per il tempo libero. 
+        <strong>Vestibilità ridotta: la taglia XL veste come una L.</strong>  
+        Disponibilità: <strong>2 XL</strong>, <strong>2 XXL</strong> e <strong>1 XL</strong>.  
+        <strong>Fino a esaurimento scorte.</strong></p>
         <p><strong>15€</strong></p>
         <a href="https://wa.me/393466358755" class="btn">Info su WhatsApp</a>
       </div>
 
-    </div>
-  </div>
 
   <!-- Glider init -->
   <script>
