--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
         <h2>Canotta Ufficiale</h2>
         <p>Comoda e traspirante, perfetta per giocare e per il tempo libero. 
-        <strong>Vestibilità ridotta: la taglia XL veste come una L.</strong>  
+        <strong>Vestibilità ridotta: la taglia XL veste come una L.</strong>.  
         Disponibilità: <strong>2 XL</strong>, <strong>2 XXL</strong> e <strong>1 XL</strong>.  
         <strong>Fino a esaurimento scorte.</strong></p>
         <p><strong>15€</strong></p>
