--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <h2>Canotta Ufficiale</h2>
         <p>Comoda e traspirante, perfetta per giocare e per il tempo libero. 
         <strong>Vestibilità ridotta: la taglia XL veste come una L</strong>.  
-        Disponibilità: <strong>2 XL</strong>, <strong>2 XXL</strong> e <strong>.  
+        Disponibilità: <strong>2 XL</strong>, <strong>2 XXL</strong>.  
         <strong>Fino a esaurimento scorte.</strong></p>
         <p><strong>15€</strong></p>
         <a href="https://wa.me/393466358755" class="btn">Info su WhatsApp</a>
